Sceleton for Dynamic example. Code plugin cleanup.

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -30,6 +30,9 @@
             {{#link-to 'stage'}}
                 Using stage
             {{/link-to}}
+            {{#link-to 'dynamic'}}
+                Dynamic chart settings
+            {{/link-to}}
         </div>
     </div>
     <div class="body">
