Dynamic settings example done

--- a/tests/dummy/app/templates/dynamic.hbs
+++ b/tests/dummy/app/templates/dynamic.hbs
@@ -1,11 +1,12 @@
 <h2>Dynamic chart settings</h2>
 <p>
     <label>Palette:</label>
-    <select name="palette">
-        {{#each colorOptions}}
-            <option>{{this}}</option>
+    <select onchange={{action "changePalette" value="target.value"}}>
+        {{#each paletteOptions as |palette|}}
+            <option value="{{palette}}">{{palette}}</option>
         {{/each}}
     </select>
 </p>
+
 {{ember-anychart instance=model}}
 {{outlet}}
