Streaming data example

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -33,6 +33,12 @@
             {{#link-to 'dynamic'}}
                 Dynamic chart settings
             {{/link-to}}
+            {{#link-to 'data-from-file'}}
+                Getting chart data from file
+            {{/link-to}}
+            {{#link-to 'streaming'}}
+                Dynamic data
+            {{/link-to}}
         </div>
     </div>
     <div class="body">
