--- a/tests/dummy/app/templates/stage.hbs
+++ b/tests/dummy/app/templates/stage.hbs
@@ -6,5 +6,7 @@
         height: 600px;
     }
 </style>
+<!-- Just pass our stage instance to ember-anychart component-->
+<!-- Also we can set custom id and classes for chart containing div -->
 {{ember-anychart instance=model id="custom-styled-container" class="class2"}}
 {{outlet}}
