Attributes processing in progress

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -5,6 +5,9 @@
             {{#link-to 'simple'}}
                 Simple chart
             {{/link-to}}
+            {{#link-to 'chart-by-attributes'}}
+               Chart by attributes
+            {{/link-to}}
             {{#link-to 'stage'}}
                 Using stage
             {{/link-to}}
