Attributes processing done. Chart by attribute example.

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,25 +1,25 @@
 <div class="container">
-    <h1 id="title">Welcome to Ember.js + AnyChart</h1>
-    <div class="menu">
-        <div class="links">
-            {{#link-to 'simple'}}
-                Simple chart
-            {{/link-to}}
-            {{#link-to 'chart-by-attributes'}}
-               Chart by attributes
-            {{/link-to}}
-            {{#link-to 'stage'}}
-                Using stage
-            {{/link-to}}
-            {{#link-to 'dynamic'}}
-                Dynamic chart settings
-            {{/link-to}}
-            {{#link-to 'streaming'}}
-                Dynamic data
-            {{/link-to}}
-        </div>
+  <h1 id="title">Welcome to Ember.js + AnyChart</h1>
+  <div class="menu">
+    <div class="links">
+      {{#link-to 'simple'}}
+        Simple chart
+      {{/link-to}}
+      {{#link-to 'chart-by-attributes'}}
+        Chart by attributes
+      {{/link-to}}
+      {{#link-to 'stage'}}
+        Create stage with charts
+      {{/link-to}}
+      {{#link-to 'dynamic'}}
+        Dynamic chart settings
+      {{/link-to}}
+      {{#link-to 'streaming'}}
+        Streaming
+      {{/link-to}}
     </div>
-    <div class="body">
-        {{outlet}}
-    </div>
+  </div>
+  <div class="body">
+    {{outlet}}
+  </div>
 </div>
