--- a/tests/dummy/app/templates/chart-by-attributes.hbs
+++ b/tests/dummy/app/templates/chart-by-attributes.hbs
@@ -1,3 +1,3 @@
 <h2>Create chart by component attributes</h2>
-{{ember-anychart data=model.data}}
+{{ember-anychart data=model.data type=model.type title=model.title}}
 {{outlet}}
