Examples code clean up. Readme.

--- a/tests/dummy/app/templates/stage.hbs
+++ b/tests/dummy/app/templates/stage.hbs
@@ -8,5 +8,5 @@
 </style>
 <!-- Just pass our stage instance to ember-anychart component-->
 <!-- Also we can set custom id and classes for chart containing div -->
-{{ember-anychart instance=model id="custom-styled-container" class="class2"}}
+{{ember-anychart instance=model.stage id="custom-styled-container" class="class2"}}
 {{outlet}}
