--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,21 +1,21 @@
 <div class="container">
-  <h1 id="title">Welcome to Ember.js + AnyChart</h1>
+  <h1 id="title">Welcome to Ember plugin for AnyChart examples page</h1>
   <div class="menu">
     <div class="links">
       {{#link-to 'simple'}}
         Simple chart
       {{/link-to}}
       {{#link-to 'chart-by-attributes'}}
-        Chart by attributes
+        Chart with custom settings
       {{/link-to}}
       {{#link-to 'stage'}}
-        Create stage with charts
+        Simple dashboard
       {{/link-to}}
       {{#link-to 'dynamic'}}
-        Dynamic chart settings
+        Chart with dynamic settings
       {{/link-to}}
       {{#link-to 'streaming'}}
-        Streaming
+        Data streaming
       {{/link-to}}
     </div>
   </div>
