Added Gantt chart example

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -17,6 +17,9 @@
       {{#link-to 'streaming'}}
         Data streaming
       {{/link-to}}
+      {{#link-to 'gantt'}}
+        Gantt chart
+      {{/link-to}}
     </div>
   </div>
   <div class="body">
