--- a/tests/dummy/app/templates/gantt.hbs
+++ b/tests/dummy/app/templates/gantt.hbs
@@ -1,1 +1,9 @@
+<h2>Gantt chart</h2>
+<style>
+  .wide-container {
+    width: 100%;
+    height: 600px;
+  }
+</style>
+{{ember-anychart instance=model.chart afterDraw=model.afterDraw class="wide-container"}}
 {{outlet}}
