--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -16,9 +16,12 @@
       {{/link-to}}
       {{#link-to 'streaming'}}
         Data streaming
-      {{/link-to}}
+      {{/link-to}}<br>
       {{#link-to 'gantt'}}
         Gantt chart
+      {{/link-to}}
+      {{#link-to 'stock'}}
+        Stock chart
       {{/link-to}}
     </div>
   </div>
