--- a/tests/dummy/app/templates/stock.hbs
+++ b/tests/dummy/app/templates/stock.hbs
@@ -1,3 +1,3 @@
-<h2>Simple gantt chart</h2>
+<h2>Simple stock chart</h2>
 {{ember-anychart instance=model.chart afterDraw=model.afterDraw class="wide-container"}}
 {{outlet}}
