Choropleth map example added

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -17,11 +17,14 @@
       {{#link-to 'streaming'}}
         Data streaming
       {{/link-to}}<br>
-      {{#link-to 'gantt'}}
-        Gantt chart
-      {{/link-to}}
       {{#link-to 'stock'}}
         Stock chart
+      {{/link-to}}
+      {{#link-to 'map'}}
+        Choropleth map
+      {{/link-to}}
+      {{#link-to 'gantt'}}
+        Gantt chart
       {{/link-to}}
     </div>
   </div>
