--- a/tests/dummy/app/templates/stock.hbs
+++ b/tests/dummy/app/templates/stock.hbs
@@ -3,6 +3,6 @@
 <p>In <b>stock</b> route (<i>ember-anychart\tests\dummy\app\routes\stock.js</i>) we load big data from json file <i>ember-anychart\tests\dummy\public\stock-data.json</i>
 and pass this data to private function that creates chart.</p>
 <p>Also we use after draw callback function to set up range picker and range selector.</p>
-<p><code>&#123;&#123;ember-anychart instance=model.chart afterDraw=model.afterDraw class="wide-container"#125;&#125;</code></p>
+<p><code>&#123;&#123;ember-anychart instance=model.chart afterDraw=model.afterDraw class="wide-container"&#125;&#125;</code></p>
 {{ember-anychart instance=model.chart afterDraw=model.afterDraw class="wide-container"}}
 {{outlet}}
