--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1 id="title">Welcome to Ember plugin for AnyChart examples page</h1>
+  <h1 id="title">Welcome to Ember plugin for AnyChart Samples</h1>
   <div class="menu">
     <div class="links">
       {{#link-to 'simple'}}
