--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -5,7 +5,7 @@
       {{#link-to 'simple'}}
         Simple chart
       {{/link-to}}
-      {{#link-to 'chart-by-attributes'}}
+      {{#link-to 'chart-with-custom-settings'}}
         Chart with custom settings
       {{/link-to}}
       {{#link-to 'stage'}}
