--- a/tests/dummy/app/templates/dynamic.hbs
+++ b/tests/dummy/app/templates/dynamic.hbs
@@ -1,6 +1,6 @@
 <h2>Chart with dynamic settings</h2>
-<p>If you change some setting of AnyChart diagram instance, it will be applied dynamically.<br>
-  In this example we change palette option using select input and processing it's <i>onchange</i> event in proper controller
+<p>If you change some setting of AnyChart chart instance, it will be applied dynamically.</p>
+<p>In this example we change <i>palette</i> option using select input and processing it's <i>onchange</i> event in proper controller
   <i>ember-anychart\tests\dummy\app\controllers\dynamic.js</i></p>
 <p>
     <label>Palette:</label>
