--- a/tests/dummy/app/templates/simple.hbs
+++ b/tests/dummy/app/templates/simple.hbs
@@ -1,8 +1,8 @@
 <h2>Simple chart example</h2>
-<p>This is the most simple example of using <strong>ember-anychart</strong> plugin. We can create AnyChart diagram
+<p>This is the most simple example of using <strong>ember-anychart</strong> plugin. We can create AnyChart chart
   using <strong>&#123;&#123;ember-anychart&#125;&#125;</strong> element and define it's <i>instance</i> attribute.</p>
 <p><code>&#123;&#123;ember-anychart instance=model.chart&#125;&#125;</code></p>
-<p>We create AnyChart instance, provide it's settings and data in route file <i>ember-anychart\tests\dummy\app\routes\simple.js</i>.</p>
+<p>We create AnyChart chart instance, provide it's settings and data in route file <i>ember-anychart\tests\dummy\app\routes\simple.js</i>.</p>
 <!-- Just pass our chart instance to ember-anychart component-->
 {{ember-anychart instance=model.chart}}
 {{outlet}}
