--- a/tests/dummy/app/templates/stage.hbs
+++ b/tests/dummy/app/templates/stage.hbs
@@ -6,7 +6,7 @@
         height: 600px;
     }
 </style>
-<p>Using <strong>&#123;&#123;ember-anychart&#125;&#125;</strong> element you can create not only AnyChart diagram but also dashboard.
+<p>Using <strong>&#123;&#123;ember-anychart&#125;&#125;</strong> element you can create not only AnyChart chart but also dashboard with multiple charts on it.
   All you need is to pass stage instance to <i>instance</i> attribute.</p>
 <p><code>&#123;&#123;ember-anychart instance=model.stage&#125;&#125;</code></p>
 <p>Stage instance is created in route file <i>ember-anychart\tests\dummy\app\routes\stage.js</i>.</p>
