Exambles refactoring and readme

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -2,29 +2,29 @@
   <h1 id="title">Welcome to Ember plugin for AnyChart Samples</h1>
   <div class="menu">
     <div class="links">
-      {{#link-to 'simple'}}
+      {{#link-to 'simple-chart'}}
         Simple chart
       {{/link-to}}
       {{#link-to 'chart-with-custom-settings'}}
         Chart with custom settings
       {{/link-to}}
-      {{#link-to 'stage'}}
+      {{#link-to 'simple-dashboard'}}
         Simple dashboard
       {{/link-to}}
-      {{#link-to 'dynamic'}}
+      {{#link-to 'chart-with-dynamic-settings'}}
         Chart with dynamic settings
       {{/link-to}}
-      {{#link-to 'streaming'}}
+      {{#link-to 'data-streaming'}}
         Data streaming
       {{/link-to}}<br>
-      {{#link-to 'stock'}}
-        Stock chart
+      {{#link-to 'simple-stock-chart'}}
+        Simple stock chart
       {{/link-to}}
-      {{#link-to 'map'}}
-        Choropleth map
+      {{#link-to 'geographical-colored-map'}}
+        Geographical colored map
       {{/link-to}}
-      {{#link-to 'gantt'}}
-        Gantt chart
+      {{#link-to 'simple-gantt-chart'}}
+        Simple gantt chart
       {{/link-to}}
     </div>
   </div>
