--- a/tests/dummy/app/templates/simple-chart.hbs
+++ b/tests/dummy/app/templates/simple-chart.hbs
@@ -1,4 +1,4 @@
-<h2>Simple Chart Sample</h2>
+<h2>Simple chart</h2>
 <p>This is the most simple example of using <strong>ember-anychart</strong> plugin. We can create AnyChart chart
   using <strong>&#123;&#123;ember-anychart&#125;&#125;</strong> element and define the <i>instance</i> attribute.</p>
 <p><code>&#123;&#123;ember-anychart instance=model.chart&#125;&#125;</code></p>
